<resources>
    <string name="app_name">蝌蚪运动</string>
    <string name="home">首页</string>
    <string name="plan">计划</string>
    <string name="community">社交</string>
    <string name="mine">我的</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="gpsNotifyMsg">当前应用需要打开定位功能。\n\n请点击\"设置\"-\"定位服务\"-打开定位功能。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="user_name">账户</string>
    <string name="user_password">密码</string>
    <string name="user_login">登陆</string>
    <string name="start_motion">开始运动</string>
    <string name="yhm">用户名</string>
    <string name="rj">日均步数</string>
    <string name="zlc">总里程</string>
    <string name="zt">运动状态</string>
    <string name="wjma">忘记密码？</string>
    <string name="kszc">快速注册</string>
    <string name="bdsj">手机号</string>
    <string name="xma">新密码</string>
    <string name="qrma">确认密码</string>
    <string name="yzm">验证码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="zhmab">找回密码</string>
    <string name="nicheng">昵称:</string>
    <string name="zmima">密码：</string>
    <string name="register">注册</string>
    <string name="phone">手机:</string>
    <string name="yanzhengma">验证码:</string>
    <string name="hq_yzm">获取验证码</string>
    <string name="xxxx">详细资料</string>
    <string name="nicheng2">昵称</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="hight">身高</string>
    <string name="weight">体重</string>
    <string name="Birthday">生日</string>
    <string name="School">学校</string>
    <string name="Department">系部</string>
    <string name="clazz">班级</string>
    <string name="snumber">学号</string>
    <string name="constellation">星座</string>
    <string name="Hometown">故乡</string>
    <string name="declaration">运动宣言</string>
    <string name="bjzl">编辑</string>
    <string name="zlbj01">信息填写</string>
    <string name="bczl">提交</string>
    <string name="sex01">男</string>
    <string name="sex02">女</string>
    <string name="Author"> 作者:  达州职业技术学院 hello world团队（杨世杰、郭天宇、卢瑞）</string>
    <string name="Version">版本号：V 1.0.1</string>
    <string name="bitian">*</string>
    <string name="jieshi">（带*表示必填）</string>
    <string name="mine_plan">我的计划</string>
    <string name="seeing">查看</string>
    <string name="running_plan">跑步计划——定制</string>
    <string name="climbing_plan">登山计划——定制</string>
    <string name="cycling_plan">骑行计划——定制</string>
    <string name="going_plan">步行计划——定制</string>
    <string name="more">更多计划，敬请期待！</string>
    <string name="bisaihuodong">比赛活动</string>
    <string name="jifenshangc">积分商城</string>
    <string name="xiaoyuandongtai">校园动态</string>
    <string name="yundongzix">运动咨询</string>
    <string name="remen">热门</string>
    <string name="xiaoship">小视频</string>
    <string name="cdw">cm</string>
    <string name="wdw">kg</string>
    <string name="faq">常见问题</string>
    <string name="faq_01">如何定制「我的计划」？</string>
    <string name="faq_001">   定制（添加）我的训练计划, 当前未定制训练计划的用户在「计划」－「定制卡片」－「计划定制」中可以定制训练计划，然后在计划即可看到「我的计划」啦。  每个用户最多能只能同时参加1个训练计划。</string>
    <string name="faq_02">跑步会耗费流量吗？</string>
    <string name="faq_002">蝌蚪运动 使用 GPS 定位，跑步过程中无需流量，但是在记录上传过程中需要连接网络，使用流量或Wi-Fi。</string>
    <string name="faq_03">为什么经常搜索不到 GPS 信号？</string>
    <string name="faq_003">一般情况下，是跑步地点 GPS 信号不好导致 蝌蚪运动 无法获得你具体的地理位置信息。如果您在室内，可以到室外去尝试；如果您已经在室外了，那么请尽量避开高楼、高大的树木、高架桥、隧道等，避免影响 GPS 信号的获取。</string>
    <string name="faq_04">每天记录步数耗电会更多吗？</string>
    <string name="faq_004">由于 蝌蚪运动 使用系统的内置 计步芯片 进行计步，无需后台一直运动也能准确计步，因此几乎没有额外的耗电。</string>
    <string name="tzxuany">每天1万步，保持好身材！</string>
    <string name="ydts">计划定制须知</string>
    <string name="knows">我知道了</string>
    <string name="Content">  制订锻炼计划是为了保证锻炼更具有科学性，更符合实际，克服锻炼的盲目性和随意性，做到有步骤、有系统地锻炼。同时也为了检验锻炼的方法和效果，总结经验教训。
        此外，按计划锻炼也是对自己的一种约束，可以督促自己坚持锻炼，不断提高锻炼的质量和水平，达到预期的目的。
        指定锻炼计划应以个人的体质状况、体力强弱、年龄性别、工作情况、劳动强度、生活条件以及锻炼目的为依据，准确的为您制定适合自己的运动计划。
        请务必认真填写个人情况！</string>
    <string name="sz_tx">设置提醒</string>
    <string name="pl_tx01">第一次提醒时间:</string>
    <string name="pl_tx02">第二次提醒时间:</string>
    <string name="plan_context">计划内容</string>
    <string name="yd_knows">运动小学堂</string>
    <string name="pl_zs01">在准备锻炼之前，要有一个大致的规划和设想，明确锻炼的目标和基本要求。例如，有人把锻炼作为闲暇时的一种娱乐，活动以下筋骨，调整以下心理状态；有人是为了矫正身体某部位微小的畸形；有人为了健身，达到改善体型的目的；有人想达到某种体格标准；有人纯属为了减肥；有人想做一名健美运动员，参加健美表演和比赛；等等。目的不同，计划各异。</string>
    <string name="pl_zs02">主要包括身体健康状况、身体素质水平、体型类别、身高和骨骼的粗细、体重与瘦胖、个性特点与毅力、工作性质与空余时间、生活水平等。全面分析以下自己参加锻炼的可行性，使制订的计划更符合个人的实际情况。如果想在竞技健美方面有所造诣，还必须考虑比赛任务。</string>
    <string name="pl_zs001">一、明确锻炼的目的</string>
    <string name="pl_zs002">二、掌握自己的基本情况</string>
    <string name="pl_zs003">三、落实锻炼的场地器械</string>
    <string name="pl_zs03">制订锻炼计划时，必须考虑锻炼的场地和器械条件。是在家里自备器械练，还是到附近的健身房、馆练，要做到心中有数。这样，根据条件才能制订出切实可行的锻炼计划。</string>
    <string name="pl_zs004">四、制订好课时锻炼计划</string>
    <string name="pl_zs04">这是实施锻炼最基本、最重要的一个环节。  其内容包括： 1、每次课锻炼的任务和要求。  2、每次课锻炼的身体部位及采用的方法、器械及动作。  3、每次课每个部位锻炼的时间分配和运动量安排。  4、每次课每个动作的重量、次数、组数、强度和密度。  总之，一个完善的锻炼计划应使每个锻炼者能从中获得最大的收益，且都能做到：  1、确切了解锻炼怎样开始，从哪儿着手，每一步该做些什麽。  2、轻松、适度、顺利地进行锻炼，不会引起受伤和惊慌，也不介意练了多长时间。  3、稳定地朝着既定目标前进。  4、锻炼过程中对测定的锻炼效果感到满意。</string>
    <string name="pl_zs005">注意事项：</string>
    <string name="pl_zs05">健身计划一定要注意强度不要太大，否则不但效果不好，还容易让你受伤。 每天最少要坚持1小时到1.5小时，每天的运动要保持全面，运动量是按照个人体制来定，如果身体比较弱的话可以一开始选择增强身体素质的锻炼方法，等体能上来后，再改为增肌或减脂的运动 。</string>
    <string name="fromxc">从相册选择图片</string>
    <string name="Photograph">拍照</string>
    <string name="Cancel">取消</string>
    <string name="play_dynamic">发布动态</string>
    <string name="vedio">上传小视频</string>
    <string name="fxdt">分享有趣的事...</string>
    <string name="fbdt">发布动态</string>
    <string name="fbwz">发表</string>
    <string name="xzbd">选择本地图片</string>
    <string name="ydcs">运动常识</string>
    <string name="cs_01">1、锻炼时绝不能喝水</string>
    <string name="cs_001">再也没有比这更为荒谬的了。你甚至不必等到口渴时才喝水。如果你觉得快要脱水了,应马上补充水份。早上锻炼前应喝上一杯水。  体内的细胞要靠循环来获取所需的能量,排泄废物。缺水时,滋润细胞的体液就会减少,细胞就无法正常地活动。没有体液,肌肉不能继续工作,心脏就会极度的疲劳。失去的部分体液是血。这意味着,为了让减少了的血液继续循环,心脏不得不多跳好几次。</string>
    <string name="cs_02">2、锻炼前吃糖可提高能量水平</string>
    <string name="cs_002">在比赛或锻炼前摄取食糖,害甚于益。即便像蜜糖和柠檬汁之类也会有不良效果。通过生理研究发现,糖类会引起胰岛素反应。其结果会把体内的糖份驱赶到贮存器官内。  需要吃糖补充已耗尽的能量只能在象马拉松赛跑、高尔夫球赛或网球赛这样的连续运动一个半小时以后,多余的糖才不会产生额外的能量。</string>
    <string name="cs_03">3、运动前禁吃某些食物</string>
    <string name="cs_003">在加州大学洛杉矶分校的人体运动实验室所做的大量测试业已证明,人吃的食物种类于运动或健康无关紧要。我们搜罗有关此说的材料,选出在禁食之列的食物,免费送给大学里的运动员吃。难消化的、产生气体的、加佐料的——应有尽有。无论是在运动场上还是在实验室里,无论是运动员本人还是研究人员,谁都没有发现任何奇异的现象,更没有任何运动员因吃“禁用”食物而病倒。</string>
    <string name="cs_04">4、游泳前不要进食</string>
    <string name="cs_004">这个说法如何产生.我们无从知晓。既无记载亦无科学实证。痉挛很少引起过溺水身亡之事。因痉挛溺水而亡的人可能患有心脏病。  反对泳前吃食的理论根据是:这样做会把血液引入肠内。按照这样说法,开始锻炼时,由于肌肉也要血液,心脏会劳累过度。事实上,一旦开始运动,血液流到肠部就停止不前了,继而又流向肌肉。  食后就锻炼,至多只能感到肋部产生一阵剧痛。但痉挛与食物无甚干系。</string>
    <string name="cs_05">5、吃盐可防止疲乏</string>
    <string name="cs_005">绝对不行。吃盐比不吃还要糟糕。  确实,大量出汗时,肌肉会发生痉挛,除非补充盐份。盐份不会立即就驱散人的疲乏,食盐过多反而会引起恶心、呕吐。</string>
    <string name="cs_06">6、多摄入蛋白质可使人健壮</string>
    <string name="cs_006">许多运动员对此深信不疑。结果,补品推销员乐不可支,鼓励他们敞开肚子吃。其实,多吃蛋白质等于浪费钱财。  人体需要各种各样的食物。不吃某种食物正如摄取补品一样都是荒谬的。</string>
    <string name="cs_07">7、赛前或累时多睡几小时</string>
    <string name="cs_007">人既不能储蓄睡眠,也不能补睡。睡12个小时比睡8个小时还要糟糕。超过8小时、至多9小时的睡眠并不会产生精力。卧床休息会产生失调。超过9小时的最大限度,在床上的时间越长,人就越虚弱无力。偶尔以放松的状态躺在床上,几乎和睡眠一样的悠闲,同时还能得到足够的复原。因为担心睡不着,与其躺而不睡8个多小时,还不如从床上下来活动一下。睡不着时,也应放松。</string>
    <string name="cs_08">8、赛前要排一次汗</string>
    <string name="cs_008">短跑运动员想练习起跑动作,作些热身活动并无害处。与排汗准备活动不同的任何技巧准备活动都行。而长跑运动员不仅要竭尽全力,而且还要尽可能长时间地保持凉爽。我们知道,保持凉快时间最长的赛跑选手成绩最佳。  延长准备活动和排汗都会产生反作用。一个原因是,准备活动耗尽了营养贮备;另一个是,产生的体温耗尽了比赛用的能量。这对任何一个着手适应训练的人来说都是一个教训。</string>
    <string name="cs_09">9、排汗可使人处于良好状态</string>
    <string name="cs_009">运动的基本规则是:无论何时,只要可能,就要避免出汗。消暑需要能量。这种能量来自汗腺的活动。汗腺使用能量时,身体能做的工作量就减少了。力尽精疲时,汗腺停止分泌活动,人就有中暑的危险。      在奋力运动时,舒适凉快绝无危险，不舒适的温热绝无好处。</string>
    <string name="cs_010">10、锻炼后穿上毛衣</string>
    <string name="cs_0010">这一条最得老祖母的厚爱,当然也是一派胡言。用衣服包住身子,延长酷热,这毫无意义。至于会引起伤风这一说法,可以想见,身体的某一部位,如脖子会变得僵硬起来,但不会因温度的变化而伤风感冒。在锻炼后汗流浃背时,把毛衣脱掉,帮助身体恢复到正常状态。不再感到热了,出汗也减少了,再穿上毛衣,避免着凉。只要身体过热时间不长,人就会感到舒适无比。</string>
    <string name="cs_011">11、热水浴后冲冷水以关闭毛孔</string>
    <string name="cs_0011">这完全没有必要。洗完热水浴后再来一个凉水浴,感觉是不错,但后者的确应避免,既便你是个受虐狂并乐此不疲也好。受这种折磨不仅无甚裨益,反而危及性命。冷水会引起皮肤及心脏血管的收缩。血管不是毛孔，毛孔也不一定要“关闭”</string>
    <string name="cs_012">12、绝不能在中午炎热的太阳下锻炼</string>
    <string name="cs_0012">诺尔·考尔德在一首歌曲中写道,只有“疯狗和英国佬”才在骄阳当空的中午外出。实际上,在阳光明媚的日子里锻炼最为安全。太阳当头,只需一顶带沿帽子挡阴就足够了。可是,在上午及下午的中段时间里,身体没法不受太阳光线的直射。</string>
    <string name="cs_013">13、锻炼的女子会失去女性的韵味</string>
    <string name="Mountaineering">登山知识</string>
    <string name="ds_01">今天跟大家说一下登山的那些事，希望喜欢户外运动的朋友们能够从中学到一些户外生存与运动的法则，避免发生意外！</string>
    <string name="ds_002">一、总体规划</string>
    <string name="ds_0002">1、凡攀登超过1000米的山，即需周密计划。(包括路程、食宿、天气、脚力、所带装备、预计时间等，切忌不可贪多，存有侥幸心理，否则极有可能被困在半山腰，上天无路入地无门。要有至少两套计划，并考虑到最坏不可抗拒因素，如：暴雨、酷晒、大雪、动物等)。</string>
    <string name="ds_0003">2、登山需结伴而行，至少三人以上。要不然一圈圈的台阶，会击溃你的生理、心理防线。</string>
    <string name="ds_0004">3、登山时要赶早不赶晚，不然赶路到中午可能会遇到太阳的暴晒;又或者是经过一上午的阳光，山中水汽容易凝结，而高山的气候又是变化多端的，很容易在下午下雨。而早上的天气较为稳定，适宜选择登山。</string>
    <string name="ds_0005">4、在登山的前一天要休息好，不能大摆“龙门阵”(聊天)，洗个澡，因为山上可能没有洗澡的地方。</string>
    <string name="ds_0006">5、出发前不可进食过多，否则肠胃出状况在山上一时半会儿是解决不了的。</string>
    <string name="ds_0007">6、出发前要订好酒店，以便住宿。且会使旅途更有目标性和时间意识。</string>
    <string name="ds_0008">7、看天气预报。</string>
    <string name="ds_0009">8、可能有人会选择坐车到山顶然后选择走路下山的方案，但是“上山容易，下山难”，下山时的小腿肌肉和膝关节两侧承受的负荷是上山时的数倍，而且也没有像上山时，越走越凉快，越有成就感的感觉。</string>
    <string name="ds_00010">9、最后，提醒一点。选择登山伴侣，不论男女，最好选择精壮、结实、独立且有一定团队意识的互相熟知的朋友。要不然过胖过瘦，或体弱多病对如登山队都是一个打击，很有可能会前功尽弃或使时间拖延两到三倍。注：最好不要尝试全女性团队登山。</string>
    <string name="ds_02">二、装备</string>
    <string name="ds_00012">1、要带大一点的旅行包。其一是为了装的东西多一些;其二是为了爬起山方便些，手里没那么多零碎;其三，万一遇上猴子、鹰之类的野生动物，可以防止他们抢包。</string>
    <string name="ds_00013">2、所带旅行包要选取结实、防水(如果可能)、有腹扣胸扣、多口袋、颜色鲜艳(如红色、黄色等)、有荧光(如果可能)等。</string>
    <string name="ds_00014">3、最好带一顶帽子，有太阳可以挡光;没太阳可以吸收头部的汗水，使登起山来方便些。</string>
    <string name="ds_00015">4、无论是否下雨一定要带伞和雨衣。为减轻重量，可以买两到三包一次性雨衣</string>
    <string name="ds_00016">5、鞋子一定要带一双旅游鞋和一双凉鞋(或拖鞋)，因为下雨会使鞋子全部湿透，那种感觉是生不如死的。</string>
    <string name="ds_00017">6、一定要带一些药品，治疗感冒、发烧、过敏(鼻炎、哮喘)、中暑、拉肚子、上火、晕车、跌打损伤、肌肉拉伤等。(最好计划好，一人带一部分)。</string>
    <string name="ds_00018">7、尽可能多带一些塑料袋，把干的衣服装进去，保存火种;要不然，下起雨来，什么都完了。</string>
    <string name="ds_00019">三、食宿</string>
    <string name="ds_00020">1、在山上吃饭要以简单为主，管他好吃难吃，吃饱最重要。</string>
    <string name="ds_00021">2、住宾馆倒无所谓，只是价格有些高;如不幸困在山上，可以住进当地寺庙。</string>
    <string name="ds_00022">3、住在庙中，可能会遇到睡通铺的情况(十几个人一屋，男女混住)，此时要看好自己的贵重物品，男士要发挥绅士风度，保护女士人身安全。</string>
    <string name="ds_00023">4、开支要有计划，不可大手大脚。</string>
    <string name="ds_00024">四、心态</string>
    <string name="ds_00025">登山之行是对身体和心灵的一次磨砺，有益无害(当然要选择安全一点的山)。此时要发挥“三不怕”的精神——不怕苦、不怕脏、不怕累。</string>
    <string name="ds_00026">男士要主动帮女士扛重物，当开路先锋;女士也要适当为男士遮阳打伞。一路上大家一定要心情开朗，说说笑笑，这样走山路会轻松很多。</string>
    <string name="ds_00027">千万不要说一些诸如“我不想来了”或令人生气、不高兴的话，因为大家是一个团队，这时候更要团结在一起，共度难关，否则对士气是一个打击，也会影响大家对你的好感度。</string>
    <string name="ds_00028">大家一定都想回家，看着眼前的山路，背后的台阶，谁不大腿发软，小腿发颤。适当的说一句话排解情绪是可以的，但要适度。且不要把责任都归结于一个人身上，要心存感激互相帮助。</string>
    <string name="ds_00029">五、登山技巧</string>
    <string name="ds_00030">如果将攀登的山比较高或者平时较少参加攀登运动，那么，在登山之前做一些热身运动是很必要的。即利用10—20分钟做一些肌肉伸展运动，尽量放松全身肌肉，这样攀登时会觉得轻松许多。</string>
    <string name="ds_00031">向上攀登时，在每一步中都有意增添一些弹跳动作，不仅省力，还会使人显得精神，充满活力。</string>
    <string name="ds_00032">登山的时候眼睛不要老往上方看，尤其是刚开始的时候，因为双腿还没有适应这项活动，往上看会使人产生一种疲惫晕眩感。目光保留在前方三五米处是最好的。</string>
    <string name="ds_00033">登山时千万不要总是想着山有多高，爬上去还需多少时间之类的事情。不慌不忙，走走停停才能体会到爬山的乐趣，不会错过美丽的风景。在疲惫时，可以多观赏一下周围的景色，也可唱唱歌，转移注意力，倦意会有所消减。</string>
    <string name="ds_00034">下山要及时放松下肌肉，否则很可能出现小腿、大腿胀痛或全身酸痛等现象。因为运动过后或多或少会在体内产生一些副产品——乳酸，会使肌肉僵硬酸痛。及时放松肌肉，可以让减脂塑形的效果更好。放松可针对容易出现酸痛的部位(腰、臀、大小腿)进行。拉伸、放松，每个动作静止拉伸10-30秒，两侧交替进行。</string>
    <string name="faq_05">为什么改不了用户名？</string>
    <string name="faq_005" >更改用户名的时候请将必填信息全部完善，才能完整提交！完善信息请进入详细信息页，点击编辑。退出APP重新进入，更改成功！因为此APP尚未完善，给您带了不便，我们深表歉意，后期我们将继续完善此APP。</string>
</resources>