<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/blue"
    tools:context=".activity.FaqActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/blue"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="18dp"
            android:textColor="@color/bai_1"
            android:text="@string/faq"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bai_1"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/shape009"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/shape009"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:text="@string/faq_01"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="16dp"
            android:text="@string/faq_001"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="vertical"
        android:background="@drawable/shape009"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/shape009"
            android:gravity="center_vertical"
            android:text="@string/faq_02"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="16dp"
            android:text="@string/faq_002"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/shape009"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:background="@drawable/shape009"
            android:textSize="18dp"
            android:text="@string/faq_03"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:padding="5dp"
            android:text="@string/faq_003"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:background="@drawable/shape009"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/shape009"
            android:gravity="center_vertical"
            android:text="@string/faq_04"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:padding="5dp"
            android:text="@string/faq_004"
            />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="vertical"
            android:background="@drawable/shape009"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/shape009"
                android:gravity="center_vertical"
                android:text="@string/faq_05"
                android:textSize="18dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginTop="5dp"
                android:textSize="16dp"
                android:padding="5dp"
                android:text="@string/faq_005"
                />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>