<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/blue"
    tools:context=".activity.loginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<com.DaZhouvocationalandTechnicalCollege.helloworld.motion_app.activity.CustomVideoView
    android:id="@+id/videoview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    android:gravity="center"
    >
    <EditText
        android:id="@+id/ed_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="@color/bai_1"
        android:background="@drawable/shape03"
        android:singleLine="true"
        android:maxLength="18"
        android:layout_marginTop="280dp"
        android:inputType="textPersonName"
        android:hint="@string/user_name"
        />
    <EditText
        android:hint="@string/user_password"
        android:id="@+id/ed_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/bai_1"
        android:ems="10"
        android:maxLength="18"
        android:background="@drawable/shape03"
        android:singleLine="true"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape04"
        android:layout_height="40dp"
        android:textSize="18dp"
        android:textColor="@color/bai_1"
        android:text="@string/user_login" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/wjma"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/bai_1"
            android:text="@string/wjma"
            />
        <TextView
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:textColor="@color/bai_1"
            android:text="|"
            android:gravity="center"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/kszc"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/bai_1"
            android:text="@string/kszc"
            />
    </LinearLayout>
</LinearLayout>
    </FrameLayout>
</LinearLayout>